and also some fixe some layout issue for header section

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5,3 +5,23 @@
 @import './partials/searchBar';
 @import './partials/record';
 @import './partials/grid';
+@import './partials/iconBar-nav';
+@import './partials/logos';
+@import "./partials/header";
+.logosNav{
+    position: fixed;
+    bottom: 1rem;
+    width: 70%;
+    z-index: 9999;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    img{
+        height: 1.3rem;
+        cursor: pointer;
+    }
+
+    @include destkop{
+        display: none;
+    }
+}
