--- a/app/scss/partials/_general.scss
+++ b/app/scss/partials/_general.scss
@@ -12,6 +12,7 @@ body{
     font-family: 'Poppins', sans-serif;
     line-height: 1.3;
     letter-spacing: 0.1px;
+    position: relative;
 }
 
 ul{
@@ -20,6 +21,9 @@ ul{
 
 a{
     text-decoration: none;
+}
+input{
+    outline: none;
 }
 
 h2,h3,h4,h5{
