--- a/app/scss/partials/_iconBar-nav.scss
+++ b/app/scss/partials/_iconBar-nav.scss
@@ -1,10 +1,10 @@
-.iconsBar{
-    padding-block: 1rem;
-    justify-content: space-around;
-    & :first-child{
-        background-color: $first-color;
-        border-radius: 50%;
-        padding: 3px;
-        height: 1.4rem;
-    }
-}
+ .iconsBar{
+     padding-block: 1rem;
+     justify-content: space-around;
+     & :first-child{
+         background-color: $first-color;
+         border-radius: 50%;
+         padding: 3px 8px;
+         height: 1.6rem;
+     }
+ }
